--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,15 @@
     {
       "customType": "regex",
       "fileMatch": [
+        "^\\.github/workflows/.*\\.yml$"
+      ],
+      "matchStrings": [
+        "#\\s*renovate:\\s*datasource=(?<datasource>.*?)\\s+depName=(?<depName>.*?)\\s+(?:[a-z\\-_]+)?version:\\s+\"(?<currentValue>.*?)\""
+      ]
+    },
+    {
+      "customType": "regex",
+      "fileMatch": [
         "^Earthfile$"
       ],
       "matchStrings": [
