--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "jellyfin-remote-proxy"
-version = "0.1.0"
+description = "A simple remote proxy that tunnels to a remote Jellyfin server and acts as a Jellyfin server locally."
 edition = "2021"
+license = "AGPL-3.0"
+name = "jellyfin-remote-proxy"
+repository = "https://github.com/sdwilsh/jellyfin-remote-proxy"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
