--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ serde = "1.0.197"
 serde_json = "1.0.114"
 serde_yaml = "0.9.32"
 sozu-command-lib = "0.15.19"
-sozu-lib = "0.15.19"
+sozu-lib = { version = "0.15.19", default-features = false}
 time = "0.3.34"
 url = "2.5.0"
