--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -5,7 +5,7 @@ permissions:
   pull-requests: write
   contents: write
 
-on:
+on: # yamllint disable-line rule:truthy
   push:
     branches:
       - main
