Move build/test CI to devcontainer

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -45,6 +45,20 @@ jobs:
           push: never
           runCmd: just build
 
+  build:
+    needs: build-devcontainer
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Build
+        uses: devcontainers/ci@v0.3.1900000349
+        with:
+          cacheFrom: ghcr.io/${{ github.repository }}-devcontainer
+          push: never
+          runCmd: just build
+
   format:
     needs: build-devcontainer
     permissions:
@@ -60,6 +74,20 @@ jobs:
           runCmd: |
             just cargo-format
             just just-check
+
+  test:
+    needs: build
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Test
+        uses: devcontainers/ci@v0.3.1900000349
+        with:
+          cacheFrom: ghcr.io/${{ github.repository }}-devcontainer
+          push: never
+          runCmd: just test
 
   quick-lint:
     needs: build-devcontainer
