--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ log = "0.4.21"
 nix = { version = "0.27.1", features = ["net", "socket"] }
 serde = "1.0.198"
 serde_json = "1.0.115"
-serde_yaml = "0.9.33"
+serde_yml = "0.0.12"
 sozu-command-lib = "1.0.0"
 sozu-lib = { version = "1.0.0", default-features = false}
 time = "0.3.37"
