--- a/renovate.json
+++ b/renovate.json
@@ -36,7 +36,7 @@
         "renovatebot/renovate",
         "serde",
         "serde_json",
-        "serde_yaml",
+        "serde_yml",
         "url"
       ],
       "schedule": [
