feat: switch to using marinatedconcrete renovate configs

--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,9 @@
     }
   ],
   "extends": [
-    "config:recommended"
+    "github>marinatedconcrete/config//renovate/devcontainer#renovate-config-2.1.1",
+    "github>marinatedconcrete/config//renovate/marinatedconcrete#renovate-config-2.1.1",
+    "github>marinatedconcrete/config//renovate/recommended#renovate-config-2.1.1"
   ],
   "packageRules": [
     {
