--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run release-plz
         uses: MarcoIeni/release-plz-action@ccf6dd998441f26020f4315f1ebe95d9e2e42600 # v0.5.100
         with:
-          # renovate: datasource=github-releases depName=MarcoIeni/release-plz
+          # renovate: datasource=cargo depName=release-plz
           version: "0.3.45"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
