--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -25,7 +25,7 @@ jobs:
         uses: MarcoIeni/release-plz-action@v0.5
         with:
           # renovate: datasource=github-releases depName=MarcoIeni/release-plz
-          version: "release-plz-v0.3.45"
+          version: "v0.3.45"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
