feat: group release-plz updates together

--- a/renovate.json
+++ b/renovate.json
@@ -48,6 +48,17 @@
     {
       "automerge": true,
       "automergeType": "branch",
+      "groupName": "release-plz",
+      "matchPackageNames": [
+        "/release-plz/"
+      ],
+      "schedule": [
+        "after 4pm on friday"
+      ]
+    },
+    {
+      "automerge": true,
+      "automergeType": "branch",
       "groupName": "rust",
       "matchPackageNames": [
         "/^rust/"
