--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,7 @@
         "^\\.github/workflows/.*\\.yml$"
       ],
       "matchStrings": [
-        "#\\s*renovate:\\s*datasource=(?<datasource>.*?)\\s+depName=(?<depName>.*?)\\s+(?:[a-z\\-_]+)?version:\\s+\"(?<currentValue>.*?)\""
+        "#\\s*renovate:\\s*datasource=(?<datasource>.*?)\\s+depName=(?<depName>.*?)(\\s+versioning=(?<versioning>.*?))?\\s+(?:[a-z\\-_]+)?version:\\s+\"(?<currentValue>.*?)\""
       ]
     }
   ],
