--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -60,6 +60,7 @@ jobs:
         id: build_image
         uses: redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056 # v2
         with:
+          containerfiles: Containerfile
           image: ${{ github.repository }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
