--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -11,9 +11,6 @@ on:
       - renovate/**
   workflow_dispatch:
 
-env:
-  IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}"
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: true
@@ -83,7 +80,7 @@ jobs:
           REGISTRY_USER: ${{ github.actor }}
           REGISTRY_PASSWORD: ${{ github.token }}
         with:
-          registry: ${{ env.IMAGE_REGISTRY }}
+          registry: ghcr.io
           image: ${{ github.repository }}
           tags: ${{ steps.metadata.outputs.tags }}
           username: ${{ env.REGISTRY_USER }}
