--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -9,6 +9,8 @@ on: # yamllint disable-line rule:truthy
     branches:
       - main
       - renovate/**
+    tags:
+      - '*'
   workflow_dispatch:
 
 concurrency:
@@ -74,7 +76,10 @@ jobs:
         uses: docker/login-action@184bdaa0721073962dff0199f1fb9940f07167d1 # v3
         if: |
           github.event_name != 'pull_request' &&
-          github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+          (
+              github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
+              startswith(github.ref, 'refs/tags/')
+          )
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -84,7 +89,10 @@ jobs:
         uses: redhat-actions/push-to-registry@5ed88d269cf581ea9ef6dd6806d01562096bee9c # v2
         if: |
           github.event_name != 'pull_request' &&
-          github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+          (
+              github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
+              startswith(github.ref, 'refs/tags/')
+          )
         id: push
         env:
           REGISTRY_USER: ${{ github.actor }}
@@ -101,7 +109,7 @@ jobs:
       github.event_name != 'pull_request' &&
       (
         github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
-        startswith(github.ref, '/refs/tags/v')
+        startswith(github.ref, 'refs/tags/')
       )
 
     name: Build and push manifest
@@ -127,9 +135,6 @@ jobs:
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@184bdaa0721073962dff0199f1fb9940f07167d1 # v3
-        if: |
-          github.event_name != 'pull_request' &&
-          github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -147,9 +152,6 @@ jobs:
 
       - name: Push To GHCR
         uses: redhat-actions/push-to-registry@5ed88d269cf581ea9ef6dd6806d01562096bee9c # v2
-        if: |
-          github.event_name != 'pull_request' &&
-          github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         id: push
         env:
           REGISTRY_USER: ${{ github.actor }}
