--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,11 @@ version = "0.1.7"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.81"
+async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }
 env_logger = "0.11.3"
 log = "0.4.21"
 serde = "1.0.198"
 serde_json = "1.0.115"
 serde_yml = "0.0.12"
-sozu-command-lib = "1.0.0"
-sozu-lib = { version = "1.0.0", default-features = false}
-time = "0.3.37"
+tokio = { version = "1.48.0", features = ["full"] }
 url = "2.5.0"
