--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -75,11 +75,9 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3
         if: |
-          github.event_name != 'pull_request' &&
-          (
-              github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
-              startswith(github.ref, 'refs/tags/')
-          )
+          github.event_name == 'pull_request' ||
+          github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
+          startswith(github.ref, 'refs/tags/')
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -88,11 +86,9 @@ jobs:
       - name: Push To GHCR
         uses: redhat-actions/push-to-registry@5ed88d269cf581ea9ef6dd6806d01562096bee9c # v2
         if: |
-          github.event_name != 'pull_request' &&
-          (
-              github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
-              startswith(github.ref, 'refs/tags/')
-          )
+          github.event_name == 'pull_request' ||
+          github.ref == format('refs/heads/{0}', github.event.repository.default_branch) ||
+          startswith(github.ref, 'refs/tags/')
         id: push
         env:
           REGISTRY_USER: ${{ github.actor }}
