--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ version = "0.1.7"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }
 env_logger = "0.11.3"
+futures = "0.3.31"
 log = "0.4.21"
 serde = "1.0.198"
 serde_json = "1.0.115"
